# srecli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yaml  build_and_publish.yaml  build_source_dist.yaml  build_wheels.yaml  format.yaml  lint.yaml  pypi_publish.yaml  test.yaml  typecheck.yaml
docs/: conf.py  index.rst
docs/reference/: modules.rst  srecli.cli.rst  srecli.commands.cmd_status.rst  srecli.commands.rst  srecli.options.common.rst  srecli.options.rst  srecli.rst
src/srecli/: __init__.py  cli.py
src/srecli/commands/: cmd_status.py
src/srecli/options/: common.py
tests/: test_status_show.py
