[project]
name = "srecli"
version = "0.0.3"
description = "CLI tool for common SRE related work"
authors = [
    {name = "Shibhikkiran D", email = "shibhikkiran@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click ~=8.1.3",
    "loguru ~=0.7.0",
    "readchar ~=4.0.5",
    "tox ~=4.5.2",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=63.2.0",
    "wheel ~=0.37.1",
    "setuptools_scm[toml]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
srecli = 'srecli.cli:cli'

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
    "toml ~=0.10.2",
    "yapf ~=0.32.0",
    "black ~=23.3.0",
    "tox ~=4.5.2",
]
test = [
    "pytest-cov ~=4.1.0",
    "pytest ~=7.3.1",
    "tox ~=4.5.2",
]
ci = [
    "pylint ~=2.14.0",
    "toml ~=0.10.2",
    "yapf ~=0.32.0",
    "black ~=23.3.0",
    "pytest-cov[all] ~=3.0.0",
    "pytest < 5.0.0",
    "tox ~=4.5.2",
]

[tool.black]
line-length = 50
target-version = ['py38', 'py39', 'py310']
exclude = '''
(
  /(
     \.eggs
   | \.egg-info
   | \.git
   | \.venv
   | \.venv-dev
   | \.tox
   | \.mypy_cache
   | build
   | dist
   | __pycache__
  )/
   | foo.py
)
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--verbose --exitfirst --cov"
testpaths = [
    "tests",
    "integration",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    env_list =
        py310
        py39
        py38
        typecheck
        format 
        lint

    [testenv]
    deps = 
        pytest
        pytest-cov
    commands = pytest tests

    [testenv:typecheck]
    deps = 
       mypy
    commands = 
       mypy --ignore-missing-imports {posargs:src tests}

    [testenv:format]
    skip_install = True
    deps = 
        black
    commands =
        black {posargs:--check --diff src tests} 

    [testenv:lint]
    skip_install = True
    deps =
        flake8
        flake8-bugbear
    commands =
        flake8 --extend-ignore E501 --exclude .tox,.git,__pycache__docs,build,dist --show-source --statistics {posargs:src tests}
"""
